# ESP32_pH

./: CMakeLists.txt  README.md  main.c  partitions.csv
components/azure-iot-middleware-freertos/: CMakeLists.txt
components/azure-sdk-for-c/: CMakeLists.txt
components/coreMQTT/: CMakeLists.txt
components/libs/azure-iot-middleware-freertos/.github/config/: azure_iot_config.h
components/libs/azure-iot-middleware-freertos/source/: azure_iot_hub_client.c
components/sample-azure-iot/: CMakeLists.txt  transport_tls_esp32.c
main/: CMakeLists.txt  idf_component.yml
main/inc/: cs1237.h  do_sensor.h  ds3231.h  filter.h  ph_temp.h  screen_disp.h  screen_menu.h  tcp_server_com.h  user_azure.h  user_console.h  user_crc32.h  user_fram.h  user_http_server.h  user_json.h  user_ota.h  user_ouput.h  user_storage.h  user_system.h  user_time.h  web_portal.h  wifi_config_manager.h
main/src/: cs1237.c  do_sensor.c  ds3231.c  filter.c  main.c  ph_temp.c  screen_disp.c  screen_menu.c  tcp_server_com.c  user_azure.c  user_console.c  user_crc32.cpp  user_fram.c  user_http_server.c  user_ota.c  user_output.c  user_storage.c  user_system.c  user_time.c  web_portal.c  wifi_config_manager.c
